* When the user click on stop, it resets the application * Add a logo to the application * Display the state + the remaining time in the title bar
[index.html]
  Add the favicon
  Add the logo
[AppView]
  Add the method pomodoroStop
  Modifty the method render to update the page title and unactive the refresh of pomodoroHeader
[AppModel]
  Add the method reset

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -18,14 +18,14 @@ body { }
 
  #app {
    margin: auto;
-   width: 60%;
+   width: 500px;
  }
  
 /*
  * Header
  */
 #header { text-align:center}
-#header #logo {margin: 156px auto 32px auto}
+#header #logo {margin: 20% auto 32px auto}
 
 /*
  * Pomodoro
