The pomodoro user can configure these parameters in a specific windows : - Working Time - Short pause time - Long pause time - Count of iteration between 2 long pauses
From the settings part
  - when the user click on Save, the values entered are saved. He gets back to the pomodoro page.
  - when the user click on Cancel, he returns to pomodoro page

Warning : Currently the input from settings window are not validated

The user can use previous and next button from the browser

[AppModel]
- Add the application mode in this model (Pomodoro or Settings)
- Add the support of SettingsModel

[AppRouter]
- Component to manage routes (#settings and # )

[SettingsView]
- Add action on save and cancel buttons

[AppView]
- Add navigation using app.router
- use app_mode from model to know the view to diplay (pomodoro or settings)

[App.js]
- Instanciate multi view context
- Instanciate router

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -30,5 +30,11 @@ body { }
 /*
  * Pomodoro
  */
-#pomodoro { margin: auto; width:50% }
+#pomodoro { margin: auto; }
 #pomodoro #pomodoro-timeremaining {text-align:right}
+
+
+/*
+ * Settings
+ */
+#settings .numeric { text-align: right;}
